Fix padding to px not % and added margin top for spacing

--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
   }
   
   #calculator {
-    padding: 4%;
+    margin-top: 30px;
+    padding: 24px;
     width: 500px;
     height: 400px;
     gap: 30px;
@@ -43,7 +44,7 @@
   }
   
   .button {
-    padding: 4.3%;
+    padding: 20px;
     width: 60px;
     height: 40px;
     cursor: pointer;
